Add random quotation

--- a/_posts/0000-01-02-somanury.md
+++ b/_posts/0000-01-02-somanury.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+The belief in the possibility of a short decisive war appears to be one of the most ancient and dangerous of human illusions.
 Use the left arrow to go back!
